added the menu to all pages

--- a/Contact.html
+++ b/Contact.html
@@ -6,6 +6,14 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="menu">
+        <a href="file:///C:/Users/olisa/Desktop/MEST%20personal%20site/Index.html">Homepage</a>
+        <a href="file:///C:/Users/olisa/Desktop/MEST%20personal%20site/About.html">About</a>
+        <a href="file:///C:/Users/olisa/Desktop/MEST%20personal%20site/portfolio.html#">Portfolio</a>
+        <a href="file:///C:/Users/olisa/Desktop/MEST%20personal%20site/skills.html">Skills</a>
+        <a href="file:///C:/Users/olisa/Desktop/MEST%20personal%20site/contact.html">Contact Me</a>
+    </div><br>
+    
     <div>
         <h1> How to contact me </h1>
         <p>
