--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,7 @@
     <title>Homepage</title>
 </head>
 <body>
-    <div class="navbar">
+    <div class="menu">
         <a href="file:///C:/Users/olisa/Desktop/MEST%20personal%20site/Index.html">Homepage</a>
         <a href="file:///C:/Users/olisa/Desktop/MEST%20personal%20site/About.html">About</a>
         <a href="file:///C:/Users/olisa/Desktop/MEST%20personal%20site/portfolio.html#">Portfolio</a>
@@ -14,7 +14,7 @@
         <a href="file:///C:/Users/olisa/Desktop/MEST%20personal%20site/contact.html">Contact Me</a>
       </div>
       
-      <div class="header">
+      <div class="hero">
         <h1>Marketing & Design</h1>
         <p>Hi, my name is Olivia and I help products find their customers through compelling design</p>
         <a href="file:///C:/Users/olisa/Desktop/MEST%20personal%20site/portfolio.html"><button Type="button"> See My Work </button></a>
