--- a/Portfolio.html
+++ b/Portfolio.html
@@ -6,6 +6,13 @@
     <title>Portfolio</title>
 </head>
 <body>
+    <div class="menu">
+        <a href="file:///C:/Users/olisa/Desktop/MEST%20personal%20site/Index.html">Homepage</a>
+        <a href="file:///C:/Users/olisa/Desktop/MEST%20personal%20site/About.html">About</a>
+        <a href="file:///C:/Users/olisa/Desktop/MEST%20personal%20site/portfolio.html#">Portfolio</a>
+        <a href="file:///C:/Users/olisa/Desktop/MEST%20personal%20site/skills.html">Skills</a>
+        <a href="file:///C:/Users/olisa/Desktop/MEST%20personal%20site/contact.html">Contact Me</a>
+      </div> <br>
     <h1>My Work</h1>
     <p> I can help you build differents types of website, including :</p>
     <ul>
@@ -17,6 +24,6 @@
         <li><em>And more</em></li>
     </ul>
     <p> Here is a glimps of my portfolio</p>
-    
+
 </body>
 </html>
