--- a/skills.html
+++ b/skills.html
@@ -6,7 +6,36 @@
     <title>Skills</title>
 </head>
 <body>
+    <div class="menu">
+        <a href="file:///C:/Users/olisa/Desktop/MEST%20personal%20site/Index.html">Homepage</a>
+        <a href="file:///C:/Users/olisa/Desktop/MEST%20personal%20site/About.html">About</a>
+        <a href="file:///C:/Users/olisa/Desktop/MEST%20personal%20site/portfolio.html#">Portfolio</a>
+        <a href="file:///C:/Users/olisa/Desktop/MEST%20personal%20site/skills.html">Skills</a>
+        <a href="file:///C:/Users/olisa/Desktop/MEST%20personal%20site/contact.html">Contact Me</a>
+    </div><br>
+
     <h1>My Skills</h1>
-    
+    <h2> Hards Skills </h2>
+    <ul>
+        <li>Webdesign</li>
+        <li>Search Engine Optimisation SEO</li>
+        <li>Content Creation</li>
+        <li>Elementor</li>
+        <li>Email Marketing</li>
+        <li>Responsive Design</li>
+        <li>Project Management</li>
+    </ul>
+    <br>
+    <h2> Soft Skills</h2>
+    <ul>
+        <li>Creativity</li>
+        <li>Collaboration</li>
+        <li>Critical Thinking</li>
+        <li>Learning Mindset</li>
+        <li>Attention to Details</li>
+        <li>Empathy</li>
+        <li>Email Marketing</li>
+    </ul>
+    <br>
 </body>
 </html>
