--- a/About.html
+++ b/About.html
@@ -6,6 +6,14 @@
     <title>About Page</title>
 </head>
 <body>
+    <div class="menu">
+        <a href="file:///C:/Users/olisa/Desktop/MEST%20personal%20site/Index.html">Homepage</a>
+        <a href="file:///C:/Users/olisa/Desktop/MEST%20personal%20site/About.html">About</a>
+        <a href="file:///C:/Users/olisa/Desktop/MEST%20personal%20site/portfolio.html#">Portfolio</a>
+        <a href="file:///C:/Users/olisa/Desktop/MEST%20personal%20site/skills.html">Skills</a>
+        <a href="file:///C:/Users/olisa/Desktop/MEST%20personal%20site/contact.html">Contact Me</a>
+      </div><br>
+
     <h1>About Me</h1>
     <p> I am a webdesign with more than 5 years of experience in design worpdress website.
         I started my journey in 2017 with the creation of a personal blog, design a dozen more website since then.
