Changed file names and linking

--- a/Index.html
+++ b/Index.html
@@ -7,18 +7,18 @@
 </head>
 <body>
     <div class="menu">
-        <a href="file:///C:/Users/olisa/Desktop/MEST%20personal%20site/Index.html">Homepage</a>
-        <a href="file:///C:/Users/olisa/Desktop/MEST%20personal%20site/About.html">About</a>
-        <a href="file:///C:/Users/olisa/Desktop/MEST%20personal%20site/portfolio.html#">Portfolio</a>
-        <a href="file:///C:/Users/olisa/Desktop/MEST%20personal%20site/skills.html">Skills</a>
-        <a href="file:///C:/Users/olisa/Desktop/MEST%20personal%20site/contact.html">Contact Me</a>
+        <a href="./index.html">Homepage</a>
+        <a href="./about.html">About</a>
+        <a href="./portfolio.html#">Portfolio</a>
+        <a href="./skills.html">Skills</a>
+        <a href="./contact.html">Contact Me</a>
       </div>
       
       <div class="hero">
         <h1>Marketing & Design</h1>
         <p>Hi, my name is Olivia and I help products find their customers through compelling design</p>
-        <a href="file:///C:/Users/olisa/Desktop/MEST%20personal%20site/portfolio.html"><button Type="button"> See My Work </button></a>
-        <a href="file:///C:/Users/olisa/Desktop/MEST%20personal%20site/contact.html"> <button type="button"> Contact me </button> </a>
+        <a href="./portfolio.html"><button Type="button"> See My Work </button></a>
+        <a href="./contact.html"> <button type="button"> Contact me </button> </a>
       </div>
 
       <div class="row">
