--- a/About.html
+++ b/About.html
@@ -7,15 +7,15 @@
 </head>
 <body>
     <div class="menu">
-        <a href="file:///C:/Users/olisa/Desktop/MEST%20personal%20site/Index.html">Homepage</a>
-        <a href="file:///C:/Users/olisa/Desktop/MEST%20personal%20site/About.html">About</a>
-        <a href="file:///C:/Users/olisa/Desktop/MEST%20personal%20site/portfolio.html#">Portfolio</a>
-        <a href="file:///C:/Users/olisa/Desktop/MEST%20personal%20site/skills.html">Skills</a>
-        <a href="file:///C:/Users/olisa/Desktop/MEST%20personal%20site/contact.html">Contact Me</a>
+        <a href="./index.html">Homepage</a>
+        <a href="./about.html">About</a>
+        <a href="./portfolio.html#">Portfolio</a>
+        <a href="./skills.html">Skills</a>
+        <a href="./contact.html">Contact Me</a>
       </div><br>
 
     <h1>About Me</h1>
-    <p> I am a webdesign with more than 5 years of experience in design worpdress website.
+    <p> I am a web designer with more than 5 years of experience in design worpdress website.
         I started my journey in 2017 with the creation of a personal blog, design a dozen more website since then.
         I'll provide you with the best websites.
     </p>
