--- a/skills.html
+++ b/skills.html
@@ -7,11 +7,11 @@
 </head>
 <body>
     <div class="menu">
-        <a href="file:///C:/Users/olisa/Desktop/MEST%20personal%20site/Index.html">Homepage</a>
-        <a href="file:///C:/Users/olisa/Desktop/MEST%20personal%20site/About.html">About</a>
-        <a href="file:///C:/Users/olisa/Desktop/MEST%20personal%20site/portfolio.html#">Portfolio</a>
-        <a href="file:///C:/Users/olisa/Desktop/MEST%20personal%20site/skills.html">Skills</a>
-        <a href="file:///C:/Users/olisa/Desktop/MEST%20personal%20site/contact.html">Contact Me</a>
+        <a href="./index.html">Homepage</a>
+        <a href="./about.html">About</a>
+        <a href="./portfolio.html#">Portfolio</a>
+        <a href="./skills.html">Skills</a>
+        <a href="./contact.html">Contact Me</a>
     </div><br>
 
     <h1>My Skills</h1>
