--- a/About.html
+++ b/About.html
@@ -15,7 +15,7 @@
       </div><br>
 
     <h1>About Me</h1>
-    <p> I am a web designer with more than 5 years of experience in design worpdress website.
+    <p> I am a <b>web designer</b> with more than 5 years of experience in design worpdress website.
         I started my journey in 2017 with the creation of a personal blog, design a dozen more website since then.
         I'll provide you with the best websites.
     </p>
