--- a/skills.html
+++ b/skills.html
@@ -9,7 +9,7 @@
     <div class="menu">
         <a href="./index.html">Homepage</a>
         <a href="./about.html">About</a>
-        <a href="./portfolio.html#">Portfolio</a>
+        <a href="./portfolio.html">Portfolio</a>
         <a href="./skills.html">Skills</a>
         <a href="./contact.html">Contact Me</a>
     </div><br>
